--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,5 +1,5 @@
 apiVersion: "1"
-version: "1"
+version: "2"
 id: "tiw99-ops-controller"
 description: "CloudBees CI configuration bundle for the tiw99 ops-controller Controller"
 availabilityPattern: "cloudbees-ci-casc-workshop/tiw99/ops-controller"
@@ -9,3 +9,5 @@ plugins:
   - "plugins.yaml"
 items:
   - "items.yaml"
+catalog:
+  - "plugin-catalog.yaml"
