--- a/bundle/bundle.yaml
+++ b/bundle/bundle.yaml
@@ -1,7 +1,8 @@
 apiVersion: "1"
-version: "3"
+version: "4"
 id: "tiw99-ops-controller"
 description: "CloudBees CI configuration bundle for the tiw99 ops-controller Controller"
+parent: "base"
 availabilityPattern: "cloudbees-ci-casc-workshop/tiw99/ops-controller"
 jcasc:
   - "jcasc/"
@@ -9,5 +10,3 @@ plugins:
   - "plugins.yaml"
 items:
   - "items.yaml"
-catalog:
-  - "plugin-catalog.yaml"
